src/objects/Entity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>152 (Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionals First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEB - 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccessBUSINESS Manager - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>156</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Analyzed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_ABA__c</fullName>
        <label>Bank/ABA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>